@@ -3,6 +3,10 @@ Carlos Rueda  -  http://marinemetadata.org
 
 ChangeLog
 
+2009-05-27
+	- Unifying interface; menuBar set-up depending on interface type; new controller PortalController
+	  to improve MVC design 
+	
 2009-05-26
 	- DisclosurePanels used for metadata and components in synopsis of ontology
 	- ViewTable with column sorting capability
